# http-socket-based-server

./: .clang-format  .gitignore  CMakeLists.txt  README.txt
res/: config.json
src/: Helpers.h  HttpServer.cpp  HttpServer.h  ResourceManager.cpp  ResourceManager.h  Socket.h  TcpSocket.cpp  TcpSocket.h  main.cpp
